--- a/package.json
+++ b/package.json
@@ -10,8 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^5.16.5",
+    "@reduxjs/toolkit": "^2.2.7",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.40",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
+    "tailwindcss": "^3.4.7"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
